--- a/src/lang/locales/fr.json
+++ b/src/lang/locales/fr.json
@@ -1,7 +1,7 @@
 {
   "Home": {
-    "title": "Chouquette Bet",
-    "subtitle": "Le premier site de paris en ligne, avec des chouquettes",
+    "title": "Beer Bet",
+    "subtitle": "Le premier site de paris en ligne, avec des bières",
     "loginBtn": "Connexion",
     "myBetsBtn": "Mes paris",
     "createBtn": "Créer un pari"
@@ -9,7 +9,7 @@
   "ErrorView": {
     "title": "Oups !",
     "subtitle": "Page non trouvée.",
-    "helpers": "Nous sommes désolés, la page que tu recherches est probablement en train de profiter de son moment de gloire en tant que garniture d'un café gourmand...",
+    "helpers": "Nous sommes désolés, la page que tu recherches est probablement en train de profiter de son moment de gloire avec quelques cacahuètes en terasse...",
     "returnBtn": "Retourner à l'accueil"
   },
   "EventView": {
@@ -17,12 +17,12 @@
     "eventEnded": "Les paries sont clos, reviens plus tard pour voir les résultats !",
     "editBtn": "Modifier mon pari",
     "betBtn": "Parier sur cet évènement",
-    "btnLabel": "Tu as parié {myBet} chouquettes sur",
+    "btnLabel": "Tu as parié {myBet} bières sur",
     "bettorsSentance": "1 parieur | {count} parieurs",
     "betToast": {
       "success": {
         "title": "Bien joué !",
-        "detail": "1 chouquette pariée | {count} chouquettes pariées"
+        "detail": "1 bière pariée | {count} bières pariées"
       },
       "error": {
         "title": "Quelle tristesse :(",
@@ -89,7 +89,7 @@
   },
   "OfflineView": {
     "title": "Tu es hors ligne 😕",
-    "subtitle": "Toutes les chouquettes se sont envolées...",
+    "subtitle": "Toutes les bières se sont envolées...",
     "helper": "Reconnectes-toi et elles reviendront 😉",
     "toastDetails": "Essaye de te reconnecter à Internet"
   },
@@ -118,7 +118,7 @@
   "BetModal": {
     "questionGuess": "Pour quelle cause (perdu) paries-tu ?",
     "title": "Parier sur cet évènement",
-    "questionNumber": "Combien de chouquettes souhaites-tu parier ? (max. 10)",
+    "questionNumber": "Combien de bières souhaites-tu parier ? (max. 10)",
     "submitBet": "Parier",
     "cancelBet": "Annuler"
   },
@@ -139,7 +139,7 @@
     },
     "gainInfo": "En cas de victoire, ta mise de départ n'est pas incluse dans le gain final :)",
     "punchlineWin": [
-      "Nous savons que tu meurs d'envie de récupérer tes chouquettes, mais essayes de patienter encore un peu avant de faire une bêtise...",
+      "Nous savons que tu meurs d'envie de récupérer tes bières, mais essayes de patienter encore un peu avant de faire une bêtise...",
       "Nous t'invitons à aller réclamer ton dû avec la ou les personnes concernée(s), essaye simplement de rester pacifique...",
       "Si la ou les personnes concernées(s) ne te règles par leurs dettes, tu as officiellement le droit d'organiser un octogone pour régler le litige...",
       "Tout vient à point à qui sait attendre, mais en cas de doute, tu peux toujours aller mettre un coup de pression à la ou les personnes concernée(s)...",
@@ -148,7 +148,7 @@
     "punchlineLose": [
       "Dépêches-toi de régler tes dettes avant qu'un malheur n'arrive...",
       "Une rumeur dit qu'une vendetta se prépare si tu ne payes pas tes dettes rapidement...",
-      "Attention, la chouquette c'est sérieux, et quelqu'un qui ne récupère pas son dû peut devenir dangereux...",
+      "Attention, la bière c'est sérieux, et quelqu'un qui ne récupère pas son dû peut devenir dangereux...",
       "Vite, paye tes dettes avant que quelqu'un ne te fasse payer plus cher...",
       "Un bruit de couloir dit que quelqu'un est sur le point de te faire payer tes dettes si tu ne t'y prends pas toi même rapidement..."
     ],
@@ -158,7 +158,7 @@
     "giveMessage": "Tu dois {count} à {toUsername}",
     "getMessage": "{fromUsername} te dois {count}"
   },
-  "unit": "chouquette | chouquette | chouquettes",
+  "unit": "bière | bière | bières",
   "LegalView": {
     "title": "Mentions Légales"
   },
@@ -169,7 +169,7 @@
       "title": "Quel est le déroulé d'un pari ?",
       "BetParagraph": {
         "0": "En amont de l'évènement, les utilisateurs peuvent parier sur le résultat de l'évènement.",
-        "1": "Chacun peut miser entre 1 et 10 chouquette(s).",
+        "1": "Chacun peut miser entre 1 et 10 bière(s).",
         "title": "Parier"
       },
       "CloseParagraph": {
@@ -178,13 +178,13 @@
         "title": "Évènement clos"
       },
       "ResultParagraph": {
-        "0": "Chaque parieur peut voir s'il remporte, ou s'il doit des chouquettes (et surtout, à qui).",
+        "0": "Chaque parieur peut voir s'il remporte, ou s'il doit des bières (et surtout, à qui).",
         "1": "Exemple de résultats ",
         "title": "Résultats"
       },
       "gainInfo": "En cas de victoire, ta mise de départ n'est pas incluse dans le gain final :)",
       "punchlineWin": [
-        "Nous savons que tu meurs d'envie de récupérer tes chouquettes, mais essayes de patienter encore un peu avant de faire une bêtise...",
+        "Nous savons que tu meurs d'envie de récupérer tes bières, mais essayes de patienter encore un peu avant de faire une bêtise...",
         "Nous t'invitons à aller réclamer ton dû avec la ou les personnes concernée(s), essaye simplement de rester pacifique...",
         "Si la ou les personnes concernées(s) ne te règles par leurs dettes, tu as officiellement le droit d'organiser un octogone pour régler le litige...",
         "Tout vient à point à qui sait attendre, mais en cas de doute, tu peux toujours aller mettre un coup de pression à la ou les personnes concernée(s)...",
@@ -193,7 +193,7 @@
       "punchlineLose": [
         "Dépêches-toi de régler tes dettes avant qu'un malheur n'arrive...",
         "Une rumeur dit qu'une vendetta se prépare si tu ne payes pas tes dettes rapidement...",
-        "Attention, la chouquette c'est sérieux, et quelqu'un qui ne récupère pas son dû peut devenir dangereux...",
+        "Attention, la bière c'est sérieux, et quelqu'un qui ne récupère pas son dû peut devenir dangereux...",
         "Vite, paye tes dettes avant que quelqu'un ne te fasse payer plus cher...",
         "Un bruit de couloir dit que quelqu'un est sur le point de te faire payer tes dettes si tu ne t'y prends pas toi même rapidement..."
       ],
@@ -203,26 +203,26 @@
       "giveMessage": "Tu dois {count} à {toUsername}",
       "getMessage": "{fromUsername} te dois {count}"
     },
-    "unit": "chouquette | chouquette | chouquettes",
+    "unit": "bière | bière | bières",
     "LegalView": {
       "title": "Mentions Légales"
     },
     "Question2": {
       "title": "Comment le résultat est calculé ?",
       "definitionParagraph": {
-        "0": "Chaque parieur choisit un nombre de chouquettes (entre 1 et 10) à parier sur une proposition.",
+        "0": "Chaque parieur choisit un nombre de bières (entre 1 et 10) à parier sur une proposition.",
         "1": "À la fin du pari, l’auteur de l’évènement définit la proposition gagnante en clôturant les paris.",
-        "2": "Dès lors, nous réalisons la somme des chouquettes pariées sur un choix perdant.",
+        "2": "Dès lors, nous réalisons la somme des bières pariées sur un choix perdant.",
         "title": "Définition des gains",
         "example": {
           "0": "Nous avons 4 parieurs : Cédric, Martine, Fabrice et Édith.",
-          "1": "Cédric et Édith ont parié 8 et 2 chouquettes sur le choix vainqueur.",
-          "2": "Martine et Fabrice ont parié 4 et 4 chouquettes sur un des choix perdants.",
-          "3": "On fait la somme du nombre de chouquettes pariées sur les perdants ➜ « A » = 8",
-          "4": "On va donc diviser 8 chouquettes entre Cédric et Fabrice.",
-          "5": "Cédric a parié pour 80% (8/10) de la somme de chouquettes pariées sur le vainqueur. Édith 20% (2/10).",
-          "6": "Cédric emporte donc 80% des 8 chouquettes soit 6.4 chouquettes.",
-          "7": "Édith quant à elle, emporte 20% des 8 chouquettes soit 1.6 chouquette.",
+          "1": "Cédric et Édith ont parié 8 et 2 bières sur le choix vainqueur.",
+          "2": "Martine et Fabrice ont parié 4 et 4 bières sur un des choix perdants.",
+          "3": "On fait la somme du nombre de bières pariées sur les perdants ➜ « A » = 8",
+          "4": "On va donc diviser 8 bières entre Cédric et Fabrice.",
+          "5": "Cédric a parié pour 80% (8/10) de la somme de bières pariées sur le vainqueur. Édith 20% (2/10).",
+          "6": "Cédric emporte donc 80% des 8 bières soit 6.4 bières.",
+          "7": "Édith quant à elle, emporte 20% des 8 bières soit 1.6 bière.",
           "title": "Exemple",
           "winner": "Vainqueur",
           "loser": "Perdant",
@@ -233,9 +233,9 @@
         "0": "Pour le dispatch, on prend le montant parié par chaque perdant qu'on distribue en fonction des gains de chaque vainqueur.",
         "title": "Qui donne à qui ?",
         "exemple": {
-          "0": "Martine donnera ses 4 chouquettes au premier vainqueur Cédric.",
-          "1": "Il manquera 2.4 chouquettes à Cédric pour compléter son gain, elles seront remises par Fabrice.",
-          "2": "Les 1.6 dernières chouquettes de Fabrice seront alors remises à la deuxième gagnante Édith."
+          "0": "Martine donnera ses 4 bières au premier vainqueur Cédric.",
+          "1": "Il manquera 2.4 bières à Cédric pour compléter son gain, elles seront remises par Fabrice.",
+          "2": "Les 1.6 dernières bières de Fabrice seront alors remises à la deuxième gagnante Édith."
         }
       }
     }
@@ -248,7 +248,7 @@
     "btn": "Recharger"
   },
   "ShareModal": {
-    "shareApiTitle": "Lien d'invitation | Chouquette Bet",
+    "shareApiTitle": "Lien d'invitation | Beer Bet",
     "copyToast": "Lien copié dans le presse papier",
     "title": "Inviter des participants",
     "btn": "Inviter",
@@ -268,9 +268,9 @@
     }
   },
   "PWA": {
-    "name": "Chouquette Bet",
-    "short_name": "ChouquetteB.",
-    "description": "Le premier site de paris en ligne, avec des chouquettes"
+    "name": "Beer Bet",
+    "short_name": "Beer Bet",
+    "description": "Le premier site de paris en ligne, avec des bières"
   },
   "MatchView": {
     "tableHeader": {
