feat: add leaderboard

--- a/templates/chouquette/src/lang/locales/en.json
+++ b/templates/chouquette/src/lang/locales/en.json
@@ -283,5 +283,8 @@
       "searchBar": "Search",
       "title": "Matches",
       "bet": "Bet"
+    },
+    "Leaderboard": {
+      "title": "Leaderboard"
     }
   }
