feat: lang switch

--- a/templates/chouquette/src/lang/locales/en.json
+++ b/templates/chouquette/src/lang/locales/en.json
@@ -288,6 +288,10 @@
       "bet": "Bet"
     },
     "Leaderboard": {
-      "title": "Leaderboard"
+      "title": "Leaderboard",
+      "noResults": "You haven't bet yet."
+    },
+    "EventResultsItemUsername": {
+      "oldUsernames": "Old nicknames : "
     }
   }
